--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <section>
+<!--    Standard 3-->
     <table class="details-table">
         <caption>LEVEL 1</caption>
         <thead>
@@ -28,122 +29,510 @@
         </thead>
         <tbody>
         <tr>
-            <td>John Doe</td>
-            <td class="tick">✔</td>
-            <td class="tick">✔</td>
+            <td>Ameena</td>
             <td class="tick">✔</td>
             <td class="tick"></td>
-            <td class="tick">✔</td>
-            <td class="tick">✔</td>
-            <td class="tick">✔</td>
             <td class="tick"></td>
-            <td class="tick">✔</td>
-            <td class="tick">✔</td>
-            <td class="tick">✔</td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
             <td class="tick"></td>
             <td></td>
         </tr>
         <tr>
-            <td>Jane Smith</td>
-            <td class="tick">✔</td>
-            <td class="tick">✔</td>
+            <td>Arshiya</td>
             <td class="tick">✔</td>
             <td class="tick"></td>
-            <td class="tick">✔</td>
-            <td class="tick">✔</td>
-            <td class="tick">✔</td>
             <td class="tick"></td>
-            <td class="tick">✔</td>
-            <td class="tick">✔</td>
-            <td class="tick">✔</td>
             <td class="tick"></td>
-        </tr>
-        <tr>
-            <td>Emily Johnson</td>
-            <td class="tick">✔</td>
-            <td class="tick">✔</td>
-            <td class="tick">✔</td>
             <td class="tick"></td>
-            <td class="tick">✔</td>
-            <td class="tick">✔</td>
-            <td class="tick">✔</td>
             <td class="tick"></td>
-            <td class="tick">✔</td>
-            <td class="tick">✔</td>
-            <td class="tick">✔</td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
             <td class="tick"></td>
             <td></td>
         </tr>
+        <tr>
+            <td>Ayeshunnisa</td>
+            <td class="tick">✔</td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td></td>
+        </tr>
+
+        <tr>
+            <td>Daisy</td>
+            <td class="tick">✔</td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Komathi</td>
+            <td class="tick">✔</td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Janani</td>
+            <td class="tick">✔</td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td></td>
+        </tr>
+
+        <tr>
+            <td>Masiha</td>
+            <td class="tick">✔</td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Mehraj</td>
+            <td class="tick">✔</td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Neha</td>
+            <td class="tick">✔</td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td></td>
+        </tr>
+
+        <tr>
+            <td>Manhoj</td>
+            <td class="tick">✔</td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Rimza Banu</td>
+            <td class="tick">✔</td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Sadiya Banu</td>
+            <td class="tick">✔</td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td></td>
+        </tr>
+
+        <tr>
+            <td>Sandra</td>
+            <td class="tick">✔</td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Sheefa</td>
+            <td class="tick">✔</td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Shafiya</td>
+            <td class="tick">✔</td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td></td>
+        </tr>
+
+        <tr>
+            <td>Sneha</td>
+            <td class="tick">✔</td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Mehreen</td>
+            <td class="tick">✔</td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Reshma</td>
+            <td class="tick">✔</td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td></td>
+        </tr>
+
+        <tr>
+            <td>Umme Aiman</td>
+            <td class="tick">✔</td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Firdose Kouser</td>
+            <td class="tick">✔</td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td></td>
+        </tr>
+
         <!-- Add more participants here -->
         </tbody>
     </table>
-
+<!--    Standard 5-->
     <table class="details-table">
         <caption>LEVEL 2</caption>
         <thead>
         <tr>
             <th>Students</th>
-            <th>Number Sense</th>
-            <th>Addition and Subtraction</th>
-            <th>Multiplication</th>
-            <th>Division</th>
+            <th>Number System</th>
+            <th>Operation on Numbers</th>
             <th>Fractions</th>
+            <th>Decimals</th>
             <th>Measurement</th>
-            <th>Clocks and Calendar</th>
-            <th>Money</th>
+            <th>Time</th>
+            <th>Temperature and Money</th>
+            <th>Percentage</th>
             <th>Geometry</th>
-            <th>Symmetry and Patterns</th>
+            <th>Lines and Angles</th>
+            <th>Perimeter & Area</th>
+            <th>Patterns and Symmetry</th>
             <th>Data Handling</th>
         </tr>
         </thead>
         <tbody>
         <tr>
-            <td>John Doe</td>
-            <td class="tick">✔</td>
-            <td class="tick">✔</td>
+            <td>Tajashree</td>
             <td class="tick">✔</td>
             <td class="tick"></td>
-            <td class="tick">✔</td>
-            <td class="tick">✔</td>
-            <td class="tick">✔</td>
             <td class="tick"></td>
-            <td class="tick">✔</td>
-            <td class="tick">✔</td>
-            <td class="tick">✔</td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
             <td class="tick"></td>
             <td></td>
         </tr>
         <tr>
-            <td>Jane Smith</td>
-            <td class="tick">✔</td>
-            <td class="tick">✔</td>
+            <td>Rafiya</td>
             <td class="tick">✔</td>
             <td class="tick"></td>
-            <td class="tick">✔</td>
-            <td class="tick">✔</td>
-            <td class="tick">✔</td>
             <td class="tick"></td>
-            <td class="tick">✔</td>
-            <td class="tick">✔</td>
-            <td class="tick">✔</td>
             <td class="tick"></td>
-        </tr>
-        <tr>
-            <td>Emily Johnson</td>
-            <td class="tick">✔</td>
-            <td class="tick">✔</td>
-            <td class="tick">✔</td>
             <td class="tick"></td>
-            <td class="tick">✔</td>
-            <td class="tick">✔</td>
-            <td class="tick">✔</td>
             <td class="tick"></td>
-            <td class="tick">✔</td>
-            <td class="tick">✔</td>
-            <td class="tick">✔</td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
             <td class="tick"></td>
             <td></td>
         </tr>
+        <tr>
+            <td>Shehnaz</td>
+            <td class="tick">✔</td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Samreen</td>
+            <td class="tick">✔</td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Attiya</td>
+            <td class="tick">✔</td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Zoya</td>
+            <td class="tick">✔</td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Fathima</td>
+            <td class="tick">✔</td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td></td>
+        </tr>
+        </tbody>
+    </table>
+<!--    Standard 7-->
+    <table class="details-table">
+        <caption>LEVEL 3</caption>
+        <thead>
+        <tr>
+            <th>Students</th>
+            <th>Integers</th>
+            <th>Fractions and Decimals</th>
+            <th>Exponents and Powers</th>
+            <th>Simple Linear Equations</th>
+            <th>Algebraic Expressions</th>
+            <th>Comparing Quantities</th>
+            <th>Ratio, Proportion and Unitary Method</th>
+            <th>National System and Rational Numbers</th>
+            <th>The Triangle and its Properties</th>
+            <th>Lines and Angles</th>
+            <th>Perimeter & Area</th>
+            <th>Data Handling</th>
+            <th>Visualising Solid Shapes</th>
+            <th>Practical Geometry</th>
+            <th>Symmetry</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>Krithika</td>
+            <td class="tick">✔</td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Umme Kulsum</td>
+            <td class="tick">✔</td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Shaziya</td>
+            <td class="tick">✔</td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td class="tick"></td>
+            <td></td>
+        </tr>
+
         <!-- Add more participants here -->
         </tbody>
     </table>
