add mobile view

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<H1>BRIGHT HIGH SCHOOL</H1>
 <section>
-<!--    Standard 3-->
+    <!--    Standard 3-->
     <table class="details-table">
         <caption>LEVEL 1</caption>
         <thead>
@@ -318,7 +319,7 @@
         <!-- Add more participants here -->
         </tbody>
     </table>
-<!--    Standard 5-->
+    <!--    Standard 5-->
     <table class="details-table">
         <caption>LEVEL 2</caption>
         <thead>
@@ -454,7 +455,7 @@
         </tr>
         </tbody>
     </table>
-<!--    Standard 7-->
+    <!--    Standard 7-->
     <table class="details-table">
         <caption>LEVEL 3</caption>
         <thead>
@@ -536,6 +537,12 @@
         <!-- Add more participants here -->
         </tbody>
     </table>
+
+    <footer class="footer">
+
+        <p>&copy; 2024 Your Website Name. All rights reserved.</p>
+
+    </footer>
 </section>
 </body>
 </html>
